--- a/ui-plugin/src/plugin.css
+++ b/ui-plugin/src/plugin.css
@@ -19,8 +19,13 @@
 
 .normanNodely input {
     border: 0;
-    height: 90%;
+    height: 80%;
     padding: 0 10px;
+    background: var(--colors-ContrastDark);
+}
+
+.normanNodely input:focus {
+    background: var(--colors-ContrastBrightest);
 }
 
 #chatBot {
