--- a/Resources/Public/Plugin.css
+++ b/Resources/Public/Plugin.css
@@ -1,1 +1,54 @@
-.normanNodely{display:flex;height:100%;align-items:center;position:relative}.normanNodely .avatar{height:90%;width:40px;margin-right:10px;cursor:help}.normanNodely .avatar svg{width:100%;height:100%}.normanNodely input{border:0;height:80%;padding:0 10px;background:var(--colors-ContrastDark)}.normanNodely input:focus{background:var(--colors-ContrastBrightest)}#chatBot{display:none}.speech-bubble{position:absolute;background:#00aabb;border-radius:.4em;padding:10px;color:#fff;font-family:Arial,sans-serif;font-size:14px;width:200px;max-width:400px;top:calc(100% + 15px);left:-10px}.speech-bubble:after{content:"";position:absolute;border-style:solid;border-width:0 10px 10px;border-color:#00aabb transparent;display:block;width:0;z-index:1;top:-10px;left:20px}
+/* src/plugin.css */
+.normanNodely {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  position: relative;
+}
+.normanNodely .avatar {
+  height: 90%;
+  width: 40px;
+  margin-right: 10px;
+  cursor: help;
+}
+.normanNodely .avatar svg {
+  width: 100%;
+  height: 100%;
+}
+.normanNodely input {
+  border: 0;
+  height: 80%;
+  padding: 0 10px;
+  background: var(--colors-ContrastDark);
+}
+.normanNodely input:focus {
+  background: var(--colors-ContrastBrightest);
+}
+#chatBot {
+  display: none;
+}
+.speech-bubble {
+  position: absolute;
+  background: #00aabb;
+  border-radius: .4em;
+  padding: 10px;
+  color: white;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  width: 200px;
+  max-width: 400px;
+  top: calc(100% + 15px);
+  left: -10px;
+}
+.speech-bubble::after {
+  content: "";
+  position: absolute;
+  border-style: solid;
+  border-width: 0 10px 10px;
+  border-color: #00aabb transparent;
+  display: block;
+  width: 0;
+  z-index: 1;
+  top: -10px;
+  left: 20px;
+}
